--- a/Localizer/Localizer-Info.plist
+++ b/Localizer/Localizer-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>adc.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.nike.localizer</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
